--- a/form.html
+++ b/form.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Document</title>
+    <link rel="stylesheet" href="./assets/style.css">
 </head>
 <body>
     <form action="#" method="post" enctype="multipart/form-data">
