--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <img src="https://i.ibb.co/fdsqZmV/johannes-plenio-DKix6-Un55mw-unsplash.jpg" style="width:100%;">
     </div>
   
-    <button class="prev" onclick="plusSlides(-1)">&#10094;</button>
+    <button class="prev" onclick="plusSlides(0)">&#10094;</button>
     <button class="next" onclick="plusSlides(1)">&#10095;</button>
 </div>
 
@@ -32,14 +32,14 @@
 </center>
 
 <p>Klik tombol di bawah ini untuk menuju ke halaman formulir:</p>
-<button onclick="window.location.href='form.html'">Formulir</button>
+<button onclick="window.location.href='form.html'">Formulir &#x25B6;</button>
 
 <p>Klik tombol di bawah ini untuk menuju ke JS dasar</p>
-<button onclick="window.location.href='jsdasar.html'">Start</button>
+<button onclick="window.location.href='jsdasar.html'">JsDasar &#x25B6;</button>
 
 <p>Klik tombol di bawah ini untuk menuju ke LandingDOM</p>
-<button onclick="window.location.href='landingdom.html'">Start</button>
-</div>
-<script src="./assets/script.js"></script>
+<button onclick="window.location.href='landingdom.html'">LandingDOM &#x25B6;</button>
+
+<script src="assets/JS/script.js"></script>
 </body>
 </html>
