--- a/landingdom.html
+++ b/landingdom.html
@@ -18,13 +18,12 @@
 </center>
     
 <button id="addColorButton">Tambah Warna Judul</button>
-<button id="removeColorButton">Hapus Warna Judul</button>
+<button id="removeColorButton">Hapus Warna Judul</button></br></br>
     
 
-<p>Button menggunakan DOM</p>
-<button id="halamanUtamaBtn">Halaman Utama</button>
+<button id="halamanUtamaBtn">&#x25C0; Halaman Utama</button>
 
 </div>
-<script src="./assets/script.js"></script>
+<script src="./assets/JS/DOM.js"></script>
 </body>
 </html>
