--- a/form.html
+++ b/form.html
@@ -45,6 +45,6 @@
         <input type="submit" value="Submit"><br><br>
     </form>
 
-    <button onclick="window.location.href='index.html'">Kembali kehalaman utama</button>
+    <button onclick="window.location.href='index.html'">&#x25C0; Halaman utama</button>
 </body>
 </html>
