--- a/form.html
+++ b/form.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Document</title>
+    <title>Form</title>
     <link rel="stylesheet" href="./assets/style.css">
 </head>
 <body>
