--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
 <p>Klik tombol di bawah ini untuk menuju ke LandingDOM</p>
 <button onclick="window.location.href='landingdom.html'">LandingDOM &#x25B6;</button>
 
+<p>Klik tombol di bawah ini untuk menuju ke ProdukAPI</p>
+<button onclick="window.location.href='produkapi.html'">ProdukAPI &#x25B6;</button>
+
 <script src="assets/JS/script.js"></script>
 </body>
 </html>
