--- a/index.html
+++ b/index.html
@@ -5,11 +5,40 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Halaman Utama</title>
 <link rel="stylesheet" href="./assets/style.css">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
 
-<!-- Carousel -->
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="form.html">Formulir</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="jsdasar.html">JsDasar</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="landingdom.html">LandingDOM</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="login-responsive.html">Login Pages</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="produkapi.html">ProdukAPI</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="product-responsive.html">ResponsiveAPI</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
+<center>
+  <h2>Selamat Datang di Halaman Utama</h2>
+  </center>
+<!-- Carousel -->
 <div class="slideshow-container">
     <div class="mySlides fade">
       <img src="https://i.ibb.co/9cZK9h8/nasa-Q1p7bh3-SHj8-unsplash.jpg" style="width:100%;">
@@ -27,21 +56,6 @@
     <button class="next" onclick="plusSlides(1)">&#10095;</button>
 </div>
 
-<center>
-<h2>Selamat Datang di Halaman Utama</h2>
-</center>
-
-<p>Klik tombol di bawah ini untuk menuju ke halaman formulir:</p>
-<button onclick="window.location.href='form.html'">Formulir &#x25B6;</button>
-
-<p>Klik tombol di bawah ini untuk menuju ke JS dasar</p>
-<button onclick="window.location.href='jsdasar.html'">JsDasar &#x25B6;</button>
-
-<p>Klik tombol di bawah ini untuk menuju ke LandingDOM</p>
-<button onclick="window.location.href='landingdom.html'">LandingDOM &#x25B6;</button>
-
-<p>Klik tombol di bawah ini untuk menuju ke ProdukAPI</p>
-<button onclick="window.location.href='produkapi.html'">ProdukAPI &#x25B6;</button>
 
 <script src="assets/JS/script.js"></script>
 </body>
