--- a/product-responsive.html
+++ b/product-responsive.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <!-- saved from url=(0049)https://getbootstrap.com/docs/5.3/examples/album/ -->
-<html lang="en" data-bs-theme="dark">
-  <head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <script src="./assets/Bootstrap/color-modes.js.download"></script>
+<html lang="en" data-bs-theme="dark"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><script src="./assets/Bootstrap/color-modes.js.download"></script>
 
     
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -19,7 +17,6 @@
     <link rel="stylesheet" href="./assets/Bootstrap/css@3">
 
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-
 
 <meta name="theme-color" content="#712cf9"> 
 </head>
